# travel-backend

./: .env.example  .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml
src/controllers/: home_controller.py  passagem_controller.py  viagem_controller.py
travel_backend/: __init__.py  app.py
travel_backend/config/: cors.py  envs.py  postgres.py
travel_backend/controllers/: __init__.py  user_controller.py
travel_backend/database/: connection.py  create_tables.py
travel_backend/handlers/: clips_handler.py
travel_backend/handlers/user/: user_schema.py
travel_backend/middlewares/: cors_settings.py
travel_backend/models/: preferences.py  user.py
travel_backend/repositories/: user_repository.py
travel_backend/routers/: api.py
travel_backend/schemas/user/: user_schema.py
