[tool.poetry]
name = "travel-backend"
version = "0.1.0"
description = ""
authors = ["victor4pinheiro <victor.pinheiro.soft@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.112.1"}
python-dotenv = "^1.0.1"
sqlmodel = "^0.0.21"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
